# metai

./: .gitignore  Cargo.toml  LICENSE  README.md  tokenizer.json
scripts/: prepare_local_data.py
src/: backend.rs  lib.rs  main.rs
src/data/: data.rs  dpo.rs  mod.rs  sft.rs
src/infer/: cache.rs  mod.rs
src/model/: attention.rs  config.rs  ffn.rs  mlp.rs  mod.rs  moe.rs  norm.rs  positional_encoding.rs
src/train/: distributed.rs  dpo.rs  grpo.rs  grpo_train_step.rs  mod.rs  reward.rs  sft.rs  train.rs
tests/: model_test.rs
