[package]
name = "metai"
version = "0.1.0"
edition = "2021"

[dependencies]
# Burn 框架核心
burn = { version = "0.19.1", features = ["train", "wgpu", "vision"] }
burn-train = { version = "0.19.1" }
burn-core = { version = "0.19.1" }
burn-autodiff = { version = "0.19.1" }

# 数据处理
tokenizers = "0.22.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 实用工具
rand = "0.8"
rayon = "1.10"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"
derive_builder = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
