[package]
name = "metai"
version = "0.1.0"
edition = "2021"

[features]
default = ["wgpu"]
wgpu = ["dep:burn-wgpu"]
cuda = ["dep:burn-tch"]

[dependencies]
# Burn 框架核心
burn = { version = "0.19.1", features = ["train", "vision"] }
burn-train = { version = "0.19.1" }
# Backends
burn-wgpu = { version = "0.19.1", optional = true }
burn-tch = { version = "0.19.1", optional = true }
burn-autodiff = { version = "0.19.1" }

# 数据处理
tokenizers = "0.22.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 实用工具
rand = "0.8"
rayon = "1.10"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"
derive_builder = "0.20"

[profile.release]
opt-level = 3
lto = "thin"          # 兼顾性能与编译速度的最佳选择
codegen-units = 16    # 允许并行编译，显著提升速度
panic = 'abort'
strip = "symbols"     # 剥离符号表，显著减少二进制体积（约 50%-80%）
debug = false

[profile.dev]
opt-level = 0
debug = 1             # 减少调试信息深度
incremental = true    # 确保开启增量编译
